// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: DefaultBodyRenderer rendering should render cells according to column settings 1`] = `
<TableBodyMock>
  <TableRowMock
    className=""
    key="1"
  >
    <TableCellMock
      key="name"
    >
      Jane Doe
    </TableCellMock>
    <TableCellMock
      key="age"
    >
      30
    </TableCellMock>
  </TableRowMock>
  <TableRowMock
    className=""
    key="2"
  >
    <TableCellMock
      key="name"
    >
      Steven Bush
    </TableCellMock>
    <TableCellMock
      key="age"
    >
      36
    </TableCellMock>
  </TableRowMock>
</TableBodyMock>
`;

exports[`component: DefaultBodyRenderer rendering should render loader if isLoading is set 1`] = `
<TableBodyMock>
  <TableRowMock
    className=""
  >
    <TableCellMock
      colSpan={2}
    >
      <Loader
        fill={true}
        loading={true}
      />
    </TableCellMock>
  </TableRowMock>
</TableBodyMock>
`;
